<resources>
    <string name="app_name">bilibili_improve</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="uername">Uername</string>
    <string name="password">Password</string>
    <string name="not_registered">Not registered? </string>
    <string name="register">Register</string>
    <string name="comfirm_password">Comfirm Password</string>
    <string name="done_register">Done</string>
    <string name="already_registered">Already Registered? </string>
    <string name="login">Login</string>
    <string name="need_help">Need Help?</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_menu_mainpage">menu_mainpage</string>
    <string name="title_activity_main_menu">main_menu</string>
</resources>
