<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/book"
    tools:context=".Register">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:layout_marginTop="100dp"
        app:srcCompat="@drawable/booklogo"
        />

    <EditText
        android:id="@+id/text_username"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/login_register_editviewshape"
        android:layout_below="@id/logo"
        android:layout_centerInParent="true"
        android:drawableLeft="@drawable/user"
        android:hint="@string/uername"
        />

    <EditText
        android:id="@+id/text_password"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:background="@drawable/login_register_editviewshape"
        android:layout_below="@id/text_username"
        android:layout_marginTop="20dp"
        android:layout_centerInParent="true"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/lock"
        android:hint="@string/password"
        />

    <EditText
        android:id="@+id/text_password_check"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_below="@id/text_password"
        android:layout_marginTop="20dp"
        android:layout_centerInParent="true"
        android:background="@drawable/login_register_editviewshape"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/lock"
        android:hint="@string/comfirm_password"
        />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@id/text_password_check"
        android:layout_marginTop="20dp"
        android:layout_centerInParent="true"
        android:text="@string/done_register"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:textStyle="bold"
        android:layout_below="@id/btn_register"
        android:layout_marginTop="10dp"
        android:layout_centerInParent="true"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_registered"
            android:textColor="#ffffff"
            />

        <TextView
            android:id="@+id/textview_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:textSize="16sp"
            android:textColor="#fff"
            android:background="#123"
            android:text="Login"
            />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_register"
        android:layout_centerInParent="true"
        android:gravity="right"
        android:text="@string/need_help"
        android:layout_marginTop="40dp"
        android:textColor="#ffffff" />

    <Switch
        android:id="@+id/show_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_username"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@id/text_password"
        />

</RelativeLayout>